--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -179,3 +179,25 @@ side {
 	padding: 30px;
 }
 
+#loading {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 32px;
+  height: 32px;
+  
+  margin: -16px 0 0 -16px;
+  z-index: 100;
+  }
+
+a.close {
+	// set size, background image, etc.
+	display: block;
+	position: absolute;
+	top: 1px;
+	right: 1px;
+}
+a.close:hover {
+   background-color: #fff;
+   color: #FF0000;
+}
