--- a/app/views/fowls/show.html.haml
+++ b/app/views/fowls/show.html.haml
@@ -1,43 +1,67 @@
 #fowl_show.row
-  .col-md-8.col-md-offset-2
-    .panel.panel-default
-      .panel-heading.fowl_image.fotorama{"data-nav" => "thumbs"}
-        - @fowl.photos.each do |photo|
-          = image_tag photo.image_url(:large)
+  .col-md-12
+    %h2.title= @fowl.title
 
-       
-      .panel-heading.fowl_video
-        = video_tag @fowl.video_url, controls: true, style: " margin-left: 15%; max-width: 70%;" if @fowl.video.present?
-      .panel-body
-        %h1= @fowl.title
-        %p= @fowl.description
-      .panel-body
-        .row
-          .col-md-6
-            %p.user
-            Submitted By
-            - if @fowl.user
-              = link_to @fowl.user.name, profile_path(@fowl.user.id) 
+    .col-md-8
+      .panel.panel-default
+        .panel-heading.fowl_image.fotorama{"data-nav" => "thumbs"}
+    
+          - if @fowl.photos.present?
+            - @fowl.photos.each do |photo|
+              = image_tag photo.try(:image_url, :large)
+          - else
+            = image_tag('no-image.png')
 
-          .col-md-6
-            .btn-group.pull-right
-              - if user_signed_in?
-                - if @fowl.user_id == current_user.id
-                  = link_to 'Edit', edit_fowl_path, class: "btn btn-default"
-                  = link_to 'Delete', fowl_path, method:  :delete, data: { confirm: "Are you sure?" }, class: "btn btn-default"
-          .fb-like{"data-share" => "true", "data-show-faces" => "true", "data-width" => "450"}
+        .panel-heading.fowl_video
+          = video_tag @fowl.video_url, controls: true, style: " margin-left: 15%; max-width: 70%;" if @fowl.video.present?
+        .panel-body
+          %p= @fowl.description
+        .panel-body
+          .row
+            .col-md-6
+              %p.user
+              Submitted By
+              - if @fowl.user
+                = link_to @fowl.user.name, profile_path(@fowl.user.id) 
 
-      .panel-footer
-        .row
-          .col-md-6
-            #comment
-              %h2.comment_count= pluralize(@fowl.comments.count, "Comment")
-              - @fowl.comments.each do |comment|
-                .comment
-                  %p.username= comment.user.email
-                  %p.content= comment.content
-              %br
-              = render "comments/form"
+            .col-md-6
+              .btn-group.pull-right
+                - if user_signed_in?
+                  - if @fowl.user_id == current_user.id
+                    = link_to 'Edit', edit_fowl_path, class: "btn btn-default"
+                    = link_to 'Delete', fowl_path, method:  :delete, data: { confirm: "Are you sure?" }, class: "btn btn-default"
+            .fb-like{"data-share" => "true", "data-show-faces" => "true", "data-width" => "450"}
+
+        .panel-footer
+          .row
+            .col-md-6
+              #comment
+                %h2.comment_count= pluralize(@fowl.comments.count, "Comment")
+                - @fowl.comments.each do |comment|
+                  .comment
+                    %p.username= comment.user.email
+                    %p.content= comment.content
+                %br
+                = render "comments/form"
+
+    .col-md-4
+      .contact-box
+        %h2.title Contact the Seller
+        .location
+          %span.glyphicon.glyphicon-map-marker
+          = @fowl.user.name
+        %span.glyphicon.glyphicon-user
+        Member since 
+        = @fowl.user.created_at.strftime(" %b %C")
+        %br
+          %br
+            %a.btn.btn-orange.btn-block.btn-responsive{:href => "#"}
+              %span.glyphicon.glyphicon-earphone
+              = @fowl.contact_number
+            %hr
+              %a.btn.btn-orange.btn-block.btn-responsive{:href => "#"}
+                %span.glyphicon.glyphicon-envelope
+                Email Seller
 
 
 
