--- a/app/views/fowls/_form.html.haml
+++ b/app/views/fowls/_form.html.haml
@@ -12,22 +12,28 @@
 
 	.row
 		.col-lg-12
-			%h1.page-header Upload Images
-		.col-lg-12
-			.filelist{:id=>"filelist"}
+			.panel.panel-success
+				.panel-heading
+					%h3.panel-tile
+						Upload Images
+				.panel-footer.panel-body
+					.filelist{:id=>"filelist"}
+
+					.row
+						.col-lg-12
+							.upload
+								%br
+								%button{:type=>"button", :class=>"btn btn-default", :id=>"pickfiles", :href=>"#"} Select Image
+								%br
 
 	.row
 		.col-lg-12
-			.upload
-				%br
-				%a{:id=>"pickfiles", :href=>"#"} [Select files]
-				%br
-
-	.row
-		.col-lg-12
-			%h1.page-header Upload Video	
-			.form-group
-				= f.file_field :video, input_html: { class: 'form-control' }
+			.panel.panel-success
+				.panel-heading
+					%h3.panel-tile
+						Upload Video
+				.panel-footer.panel-body
+					= f.file_field :video, input_html: { class: 'form-control' }
 				
 	.form-group
 		= f.input :title, input_html: { class: 'form-control' }
