--- a/app/views/fowls/new.html.haml
+++ b/app/views/fowls/new.html.haml
@@ -2,7 +2,7 @@
 	.row
 		.panel.panel-default
 			.panel-heading
-				%h1 New Form
+				%h1.panel-title Advertise your fowls now
 			.panel-body
 				= render 'form'
  
