--- a/app/views/fowls/show.html.haml
+++ b/app/views/fowls/show.html.haml
@@ -57,7 +57,7 @@
           %br
             %a.btn.btn-orange.btn-block.btn-responsive{:href => "#"}
               %span.glyphicon.glyphicon-earphone
-              = @fowl.contact_number
+              = @fowl.user.contact_number
             %hr
               %a.btn.btn-orange.btn-block.btn-responsive{:href => "#"}
                 %span.glyphicon.glyphicon-envelope
