--- a/app/views/fowls/_price.html.erb
+++ b/app/views/fowls/_price.html.erb
@@ -1,5 +1,9 @@
 <div class="panel-overlay-bottom-left panel-overlay-label panel-overlay-listing-label"> 
 <!--  <sup class="h6 text-contrast">  </sup> -->
-  <span class="h3 price-amount"> <%= number_to_currency(price.price, unit: '₱') %> </span> 
+  <% if price.price.present? %>
+  	<span class="h3 price-amount"> <%= number_to_currency(price.price, unit: '₱') %> </span> 
+  <% else%>
+  	<span class="h3 price-amount"> ₱0 </span> 
+  <% end %>
   <sup class="h6 text-contrast"> </sup> 
 </div> 
