--- a/app/views/fowls/index.html.haml
+++ b/app/views/fowls/index.html.haml
@@ -1,19 +1,26 @@
 #fowls.transitions-enabled
-  - @fowls.each do |fowl|
-    .box.panel.panel-default
-      %a.link{:href => fowl_path(fowl)}
-        .image
-          - if fowl.try(:photos).first.present?
-            = image_tag fowl.try(:photos).try(:first).try(:image_url, :medium)
-          - else
-            = image_tag('no-image.png')
-          = render "price", price: fowl
-        .info
-          .headline
-            = fowl.title
-          .posted
-            %span.glyphicon.glyphicon-time
-            = fowl.created_at.strftime("Posted #{fowl.created_at.day.ordinalize} %b")
-          .posted
-            %span.glyphicon.glyphicon-map-marker
-            = fowl.user.location
+  - if @fowls.present?
+    - @fowls.each do |fowl|
+      .box.panel.panel-default
+        %a.link{:href => fowl_path(fowl)}
+          .image
+            - if fowl.try(:photos).first.present?
+              = image_tag fowl.try(:photos).try(:first).try(:image_url, :medium)
+            - else
+              = image_tag('no-image.png')
+            = render "price", price: fowl
+          .info
+            .headline
+              = fowl.title
+            .posted
+              %span.glyphicon.glyphicon-time
+              = fowl.created_at.strftime("Posted #{fowl.created_at.day.ordinalize} %b")
+            .posted
+              %span.glyphicon.glyphicon-map-marker
+              = fowl.user.location
+
+  - else
+    .alert.alert-danger{:role => "alert"}
+      %strong 
+        %span.glyphicon.glyphicon-alert
+        No results found for "#{@category.name}".
