--- a/app/views/fowls/show.html.haml
+++ b/app/views/fowls/show.html.haml
@@ -43,14 +43,14 @@
             /   Submitted By
             /   - if @fowl.user
             /     = link_to @fowl.user.name, profile_path(@fowl.user.id) 
-
+            .col-md-6
+              .fb-like{"data-share" => "true", "data-show-faces" => "true", "data-width" => "450"}
             .col-md-6
               .btn-group.pull-right
                 - if user_signed_in?
                   - if @fowl.user_id == current_user.id
                     = link_to 'Edit', edit_fowl_path, class: "btn btn-default"
                     = link_to 'Delete', fowl_path, method:  :delete, data: { confirm: "Are you sure?" }, class: "btn btn-default"
-            .fb-like{"data-share" => "true", "data-show-faces" => "true", "data-width" => "450"}
 
         .panel-footer
           .row
