--- a/app/views/layouts/fowls.html.haml
+++ b/app/views/layouts/fowls.html.haml
@@ -3,3 +3,42 @@
   .container-fluid
     .row
       = yield
+/ jQuery
+%script{:src => "js/jquery.js"}
+/ Bootstrap Core JavaScript
+%script{:src => "js/bootstrap.min.js"}
+/ Menu Toggle Script
+:javascript
+  $("#menu-toggle").click(function(e) {
+      e.preventDefault();
+      $("#wrapper").toggleClass("toggled");
+  });
+
+:javascript
+    window.fbAsyncInit = function() {
+
+      FB.init({
+
+      appId      : '1005472019475112',
+
+      xfbml      : true,
+
+      version    : 'v2.5'
+
+      });
+
+    };
+
+    (function(d, s, id){
+
+      var js, fjs = d.getElementsByTagName(s)[0];
+
+      if (d.getElementById(id)) {return;}
+
+      js = d.createElement(s); js.id = id;
+
+      js.src = "//connect.facebook.net/en_US/sdk.js";
+
+      fjs.parentNode.insertBefore(js, fjs);
+
+    }(document, 'script', 'facebook-jssdk'));
